tests/negative/owned_used_after_move.glyph
module neg

resource type FileHandle = { fd: number }

fn make() -> FileHandle {
  return { fd: 0 }
}

fn close(owned h: FileHandle) -> void {
  return void
}

fn use_it() -> void {
  let owned h: FileHandle = make()
  close(h)
  close(h)
}
